--- a/schedule.html
+++ b/schedule.html
@@ -269,7 +269,7 @@ $(document).ready(function () {
       <a href="LECTURE2.html">Introduction to population ecology</a>
     </li>
     <li>
-      <a href="LECTURE3.html">Thomas Robert Malthus (Limits to growth)</a>
+      <a href="LECTURE3.html">Thomas Malthus (Limits to growth)</a>
     </li>
     <li>
       <a href="LECTURE4.html">Population Regulation (Logistic growth)</a>
@@ -290,19 +290,10 @@ $(document).ready(function () {
       <a href="LECTURE9.html">Small population paradigm</a>
     </li>
     <li>
-      <a href="LECTURE10.html">Individual-based models</a>
-    </li>
-    <li>
       <a href="LECTURE11.html">Declining population paradigm</a>
     </li>
     <li>
-      <a href="LECTURE12.html">Population Viability Analysis</a>
-    </li>
-    <li>
       <a href="LECTURE13.html">Metapopulations</a>
-    </li>
-    <li>
-      <a href="LECTURE14.html">PVA example: pdogs and ferrets</a>
     </li>
     <li>
       <a href="LECTURE15.html">Parameter estimation</a>
@@ -359,7 +350,16 @@ $(document).ready(function () {
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
     </li>
     <li>
+      <a href="LECTURE12.html">Overview of PVA</a>
+    </li>
+    <li>
+      <a href="LECTURE14.html">PVA example: pdogs and ferrets</a>
+    </li>
+    <li>
       <a href="EXTRA_CREDIT.html">Extra Credit!</a>
+    </li>
+    <li>
+      <a href="LECTURE10.html">Individual-based models</a>
     </li>
   </ul>
 </li>
@@ -385,13 +385,13 @@ $(document).ready(function () {
 
 
 <p>Please check for updates frequently!</p>
-<table style="width:100%;">
+<table>
 <colgroup>
-<col width="8%" />
+<col width="3%" />
 <col width="4%" />
-<col width="47%" />
-<col width="20%" />
-<col width="19%" />
+<col width="51%" />
+<col width="18%" />
+<col width="21%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -632,8 +632,8 @@ paradigm</a></td>
 <tr class="even">
 <td align="left"></td>
 <td align="left">3/31/2023</td>
-<td align="left">Work on <a href="LECTURE12.html">final projects</a>
-(PVA models due Apr 12)</td>
+<td align="left">Work on <a href="FINAL_PROJECTS.html">PVA projects</a>
+(<a href="LECTURE12.html">PVA models</a> due Apr 12)</td>
 <td align="left"></td>
 <td align="left">Lab 5</td>
 </tr>
@@ -702,8 +702,8 @@ meetings (working model and description)</td>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">4/21/2023</td>
-<td align="left">LAB 7: <a href="LAB7.html">Parameter estimation:
-mark-recapture data</a></td>
+<td align="left">LAB 7 (optional-no assignment): <a
+href="LAB7.html">Parameter estimation: mark-recapture data</a></td>
 <td align="left"></td>
 <td align="left">Lab 6</td>
 </tr>
@@ -780,21 +780,6 @@ predator-prey</a></td>
 <td align="left">FINAL PAPERS DUE (last day of finals)</td>
 <td align="left"></td>
 <td align="left">Final PVA write-up</td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left">Additional lectures</td>
-<td align="left"></td>
-<td align="left">LECTURE:</td>
-<td align="left"><a href="beissinger1.pdf">Beissinger and Westphal
-1998</a></td>
-<td align="left"></td>
 </tr>
 </tbody>
 </table>
