--- a/FINAL_PROJECTS.html
+++ b/FINAL_PROJECTS.html
@@ -345,7 +345,7 @@ div.tocify {
       <a href="LECTURE2.html">Introduction to population ecology</a>
     </li>
     <li>
-      <a href="LECTURE3.html">Thomas Robert Malthus (Limits to growth)</a>
+      <a href="LECTURE3.html">Thomas Malthus (Limits to growth)</a>
     </li>
     <li>
       <a href="LECTURE4.html">Population Regulation (Logistic growth)</a>
@@ -366,19 +366,10 @@ div.tocify {
       <a href="LECTURE9.html">Small population paradigm</a>
     </li>
     <li>
-      <a href="LECTURE10.html">Individual-based models</a>
-    </li>
-    <li>
       <a href="LECTURE11.html">Declining population paradigm</a>
     </li>
     <li>
-      <a href="LECTURE12.html">Population Viability Analysis</a>
-    </li>
-    <li>
       <a href="LECTURE13.html">Metapopulations</a>
-    </li>
-    <li>
-      <a href="LECTURE14.html">PVA example: pdogs and ferrets</a>
     </li>
     <li>
       <a href="LECTURE15.html">Parameter estimation</a>
@@ -435,7 +426,16 @@ div.tocify {
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
     </li>
     <li>
+      <a href="LECTURE12.html">Overview of PVA</a>
+    </li>
+    <li>
+      <a href="LECTURE14.html">PVA example: pdogs and ferrets</a>
+    </li>
+    <li>
       <a href="EXTRA_CREDIT.html">Extra Credit!</a>
+    </li>
+    <li>
+      <a href="LECTURE10.html">Individual-based models</a>
     </li>
   </ul>
 </li>
@@ -513,7 +513,7 @@ class="section level2">
 <li><strong>Title</strong>: should indicate what species you are
 modeling, and hint at what question(s) will be addressed<br />
 </li>
-<li><strong>Project participants</strong>: provide names of all
+<li><strong>Project participants</strong>: provide names of all project
 participants (3-4).<br />
 </li>
 <li><strong>Research question(s)</strong>: Provide one or more testable
@@ -573,36 +573,38 @@ class="section level2">
 <p>Your <strong>initial parameterized PVA model</strong> will consist
 of:</p>
 <ol style="list-style-type: decimal">
-<li><p>A ready-to-run PVA model, in whatever software framework you are
-using (InsightMaker, R). This model does not need to be your “final”
-model, but it should work (e.g., produce results), the parameter
-estimates should be backed by some evidence or rationale (see below),
-and it should be capable of running your proposed scenario
+<li><p><strong>A ready-to-run PVA model</strong>, in whatever software
+framework you are using (InsightMaker or R). This model does not need to
+be your “final” model, but it should work (e.g., produce results), the
+parameter estimates should be backed by some evidence or rationale (see
+below), and it should be capable of running your proposed scenario
 tests.</p></li>
-<li><p>A written rationale/evidence for all of your parameter estimates
-and key modeling decisions.</p>
+<li><p><strong>Written rationale/evidence for all of your parameter
+estimates</strong> and key modeling decisions.</p>
 <ol style="list-style-type: lower-alpha">
 <li>For each major decision you made in constructing the model, describe
 the information you used to back up your decision (and the sources of
-this information). Decisions include: how many populations, what is your
-initial abundance(s), how many stage or age classes in your model, how
-does density-dependence (including Allee effects, if applicable) operate
-for your species (e.g., which vital rates are density-dependent, what is
-the shape of the density-dependence relationship), what are your
-survival and fecundity rates, how much annual variablility in birth and
-death rates (environmental stochasticity), what is the impact and timing
-of catastrophes (if applicable), etc. etc. Where appropriate, you can
-paste figures, tables, maps, etc. drawn from your information sources-
-just make sure you say where you got these images/tables etc.</li>
+this information). Decisions include: how many stage or age classes in
+your model, what are your survival and fecundity rates (transition
+rates), what is your initial abundance(s), how does population density
+affect vital rates in your model (density-dependence – including Allee
+effects if applicable), how much do birth and death rates vary from year
+to year (environmental stochasticity), what is the impact and timing of
+catastrophes (if applicable), etc. etc. Where appropriate, you can paste
+figures, tables, maps, etc. drawn from your information sources- just
+make sure you say where you got these images/tables etc.</li>
 <li>What scenarios do you plan to test (e.g., management scenarios,
 climate change, harvest, etc), and how will these scenarios help you to
-address your research questions? NOTE: you don’t need to run your
+address your research questions? NOTE: you don’t need to have run your
 scenario tests- just state what scenario tests you propose to run!
 <em>It must be clear that the working model you submitted is capable of
 running all of your proposed scenario tests</em>.</li>
 <li>Literature cited (format not important, as long as it includes all
 key information)</li>
 </ol></li>
+<li><p>Any questions for your instructor/TA about your model that you’d
+like to go over during our next project meeting (remember to sign up for
+a meeting on our shared Google Sheet!).</p></li>
 </ol>
 </div>
 <div
