--- a/LAB6.html
+++ b/LAB6.html
@@ -788,7 +788,9 @@ capacity (labeled “Mean K per population”).<br />
 Which management strategy would be most effective for ensuring that the
 metapopulation does not go extinct? Please justify your answer.</li>
 </ol>
-<p>##Checklist for Lab 6 completion</p>
+</div>
+<div id="checklist-for-lab-6-completion" class="section level2">
+<h2>Checklist for Lab 6 completion</h2>
 <ul>
 <li>Please submit all answers on WebCampus!</li>
 </ul>
