--- a/LECTURE11.html
+++ b/LECTURE11.html
@@ -534,7 +534,7 @@ one paradigm and against the other…</p>
 <blockquote>
 <p>Conservation biology has two threads: the small-population paradigm
 which deals with the effect of smallness on the persistence of a
-population, and the declining- population paradigm which deals with the
+population, and the declining-population paradigm, which deals with the
 cause of smallness and its cure.</p>
 </blockquote>
 <p><strong>Q</strong>: Can you detect Caughley’s opinion in the above
@@ -555,8 +555,7 @@ you hit the simulate button. Take a minute to run the base model and
 make sure you understand how it works.</p>
 <p>For this exercise, let’s change the initial population size to 200
 (half of K).</p>
-<p>Also, make sure that the time step is 1 year, and the model should
-run for 50 years.</p>
+<p>Make sure the model is set to run for 50 years.</p>
 <p><strong>Let’s add a harvest process!</strong></p>
 <ul>
 <li>Assume that approximately 10% of the population is harvested each
