--- a/LAB6.html
+++ b/LAB6.html
@@ -784,10 +784,11 @@ the maximum dispersal distance]<br />
 capacity (labeled “Mean K per population”).<br />
 </li>
 <li>Restore habitat, effectively doubling the number of patches (labeled
-“metapopulation”).<br />
-Which management strategy would be most effective for ensuring that the
-metapopulation does not go extinct? Please justify your answer.</li>
+“metapopulation”).</li>
 </ol>
+<p>5c. Which management strategy would be most effective for ensuring
+that the metapopulation does not go extinct? Please justify your
+answer.</p>
 </div>
 <div id="checklist-for-lab-6-completion" class="section level2">
 <h2>Checklist for Lab 6 completion</h2>
