--- a/LECTURE13.html
+++ b/LECTURE13.html
@@ -345,7 +345,7 @@ div.tocify {
       <a href="LECTURE2.html">Introduction to population ecology</a>
     </li>
     <li>
-      <a href="LECTURE3.html">Thomas Robert Malthus (Limits to growth)</a>
+      <a href="LECTURE3.html">Thomas Malthus (Limits to growth)</a>
     </li>
     <li>
       <a href="LECTURE4.html">Population Regulation (Logistic growth)</a>
@@ -366,19 +366,10 @@ div.tocify {
       <a href="LECTURE9.html">Small population paradigm</a>
     </li>
     <li>
-      <a href="LECTURE10.html">Individual-based models</a>
-    </li>
-    <li>
       <a href="LECTURE11.html">Declining population paradigm</a>
     </li>
     <li>
-      <a href="LECTURE12.html">Population Viability Analysis</a>
-    </li>
-    <li>
       <a href="LECTURE13.html">Metapopulations</a>
-    </li>
-    <li>
-      <a href="LECTURE14.html">PVA example: pdogs and ferrets</a>
     </li>
     <li>
       <a href="LECTURE15.html">Parameter estimation</a>
@@ -435,7 +426,16 @@ div.tocify {
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
     </li>
     <li>
+      <a href="LECTURE12.html">Overview of PVA</a>
+    </li>
+    <li>
+      <a href="LECTURE14.html">PVA example: pdogs and ferrets</a>
+    </li>
+    <li>
       <a href="EXTRA_CREDIT.html">Extra Credit!</a>
+    </li>
+    <li>
+      <a href="LECTURE10.html">Individual-based models</a>
     </li>
   </ul>
 </li>
@@ -461,10 +461,10 @@ div.tocify {
 </div>
 
 
-<div id="upcoming-midterm-exam-april-13" class="section level3">
-<h3>Upcoming midterm exam: April 13</h3>
+<div id="upcoming-midterm-exam-april-19" class="section level3">
+<h3>Upcoming midterm exam: April 19</h3>
 <p><strong>when and where</strong> The second midterm exam (out of two)
-is coming up on <strong>Wednesday April 13</strong>. You will have the
+is coming up on <strong>Wednesday April 19</strong>. You will have the
 whole 50 minute class period to take the exam (really, you have the
 whole hour if you need it). We will use the same basic format as we used
 for the first midterm.</p>
@@ -499,7 +499,7 @@ dynamics</a></li>
 use these recordings as review/study materials<br />
 </li>
 </ul></li>
-<li>All material covered in labs 1-4, including:
+<li>All material covered in labs 1-6, including:
 <ul>
 <li><a href="LAB1.html">Lab 1: exponential growth</a></li>
 <li><a href="LAB2.html">Lab 2: logistic growth</a></li>
@@ -519,88 +519,73 @@ effect lectures</li>
 </ul>
 <p><em>The exam will consist of a mixture of multiple-choice and
 short-answer questions.</em></p>
-<p>We will do a review session in class on Monday April 11. Please make
+<p>We will do a review session in class on Monday April 17. Please make
 note of any questions that come up as you study- we can talk these over
 during the review session!</p>
-<p>I will also host an optional review session on the evening of Tuesday
-April 12 (location TBD). Margarete and I will also set up some
-additional office hours, as we did for the first midterm.</p>
 </div>
 <div id="metapopulations" class="section level2">
 <h2>Metapopulations</h2>
 <div id="what-is-a-metapopulation" class="section level3">
 <h3>What is a metapopulation?</h3>
 <p>Broadly speaking, a <strong>metapopulation</strong> is a group of
-populations (often called **subpopulations) that occupy spatially
-distinct habitat patches that are close enough to support dispersal
-among patches.</p>
-<p>We often think of such models as “spatially structured” or “spatially
-explicit”, although some metapopulation models (like the models
-considered below, and in the Gotelli textbook) use a rather abstract
-representation of space!</p>
-<p>Now that we’re thinking about animals living in particular areas in
-space, we need to incorporate information about <strong>movement
-ecology</strong> in addition to <strong>population ecology</strong>!
-Patches in a metapopulation are connected via
-<strong>dispersal</strong>. If there were no <em>connectivity</em>
-(dispersal among patches), it wouldn’t really be a metapopulation, but
-rather a set of isolated populations that you could model
-independently.</p>
+populations (often called <strong>subpopulations</strong>) that occupy
+spatially distinct habitat <strong>patches</strong> that are close
+enough to support movement of individuals among patches.</p>
+<p>Now that we’re thinking about animals occupying habitat patches
+within a larger landscape (we are explicitly thinking about spatial
+locations for the first time in this class!), we need to incorporate
+information about <strong>movement ecology</strong> in addition to
+<strong>population ecology</strong>!</p>
+<p>Patches in a metapopulation are connected via
+<strong>dispersal</strong>. If there were no
+<strong>connectivity</strong> (dispersal among patches), it wouldn’t
+really be a metapopulation, but rather a set of isolated populations
+that you could model independently.</p>
 <p>Including a dispersal process allows us (finally!) to think about the
 whole “BIDE” equation!</p>
 <p><span class="math inline">\(\Delta N = B + I - D - E\)</span></p>
-<p>Metapopulation ecology covers a wide range of scenarios- as long as
-there are distinct habitat patches (subpopulations) in a landscape, and
-as long as there is some dispersal among patches, then it is a type of
-metapopulation. When there is a very high rate of dispersal (and mating)
-among patches, then the metapopulation is described as “panmictic”
-(perfect genetic connectivity).</p>
+<p>Metapopulation ecology covers a broad range of scenarios: as long as
+we can conceive of subpopulations occupying distinct habitat patches in
+a landscape, and as long as there is some dispersal among patches, then
+we can model this set of populations through the lens of metapopulation
+ecology.</p>
 <p>NOTE: in some definitions (including for ‘classical’ metapopulations
 – see below), a “metapopulation” is more narrowly defined as a set of
 patches with limited connectivity and with at least some unoccupied
 patches at some points in time. I prefer the more inclusive
 definition!</p>
 <p><img src="MP1.jpg" /></p>
-<p>Although the term “metapopulation” is often used to refer to models
-where we don’t keep track of abundance in each patch (we only consider
-<strong>patch occupancy</strong> - like the models in Gotelli Chapter
-4), we can keep track of patch abundance in a metapopulation model if we
-really want to! In fact, if we want, each patch can contain a
-stage-structured, density dependent population (like the more complex
-metapopulation model in lab 6!). Or it can contain an assemblage of
-individuals, as in an individual-based model.</p>
-<p>We will have a chance to use a metapopulation model in Lab 6 that is
-much more complex than the models in Gotelli Chapter 4!</p>
-<p>But – in fact, many metapopulation models (‘classical
-metapopulations’, covered in this lecture, lab 6 and Gotelli’s Chapter
-4) don’t consider individuals at all! Instead, we only care about
-whether a patch is occupied (N &gt; 0) or not (N = 0). Different sets of
-patches may be occupied at different points in time.</p>
-<p><img src="MP2.jpg" /></p>
-<p><img src="patch1.jpg" /></p>
-<p>For simplicity, ‘Classical’ metapopulation models assume that all
+<p>The term “metapopulation model” is often used to refer to models
+where we don’t keep track of the abundance in each patch (<span
+class="math inline">\(N\)</span> is no longer our primary unit of
+interest). Instead, we only consider <strong>patch occupancy</strong>
+(the number or fraction of patches in the metapopulation that are
+occupied) - like the models in Gotelli Chapter 4. That is, we only care
+about whether a patch is occupied (N &gt; 0 in a given patch) or not (N
+= 0) each year.</p>
+<p><img src="MP2.jpg" style="width:50.0%" /></p>
+<p>However, we CAN keep track of patch abundance in a metapopulation
+model if we really want to! In fact, if we want, each patch can contain
+a stage-structured, density dependent population (like the more complex
+metapopulation model in the final part of lab 6!).</p>
+<p>For simplicity, ‘classical’ metapopulation models assume that all
 areas outside a patch are completely unsuitable (i.e., they are NOT
 habitat).</p>
+<p><img src="patch1.jpg" style="width:40.0%" /></p>
 <p>Classical metapopulaton models also often assume that all patches are
 similar (similar habitat quality, area and connectivity to neighboring
-patches), and therefore are more or less interchangeable. [NOTE: we
-revise this assumption when we start to consider ‘source and sink’
-models below]</p>
-<p>Instead of keeping track of the individuals in each patch (<span
-class="math inline">\(N\)</span>), classical metapopulation models just
-keep track of whether or not each patch is occupied (N &gt; 0) or not (N
-= 0). Or even more simply, these models often just keep track of the
-fraction of occupied patches in our landscape (<span
-class="math inline">\(f\)</span>)!</p>
+patches), and therefore are more or less interchangeable. We will relax
+this assumption when we start to consider ‘source and sink’ models
+(below).</p>
+<p>The simplest classical metapopulation models (like those in Gotelli
+Ch 4) only keep track of the fraction of occupied patches in the
+landscape (<span class="math inline">\(f\)</span>)!</p>
 <p>Instead of keeping track of the number of individuals dispersing
 among patches, classical metapopulation models only consider the
 consequences of dispersal, which include <em>colonization</em> of
 unoccupied (empty) patches via immigration (<span
 class="math inline">\(I\)</span>) and the <em>rescue effect</em>
 (immigration preventing extinction of a patch; see below).</p>
-<p><a
-href="https://insightmaker.com/insight/74948/Agent-based-metapopulation-model">Link
-to metapopulation model with explicit abundance</a></p>
 </div>
 </div>
 <div id="classical-metapopulation-models" class="section level2">
@@ -612,22 +597,13 @@ href="https://en.wikipedia.org/wiki/Richard_Levins">Richard Levins</a>
 in 1969, and further developed by <a
 href="https://en.wikipedia.org/wiki/Ilkka_Hanski">Ilkka Hanski</a> among
 others.</p>
-<p>In a classical metapopulation, patches are either
-<strong>occupied</strong> (coded as 1) or <strong>unoccupied</strong>
-(coded as 0) at any given point in time. We don’t consider abundance
-(<span class="math inline">\(N\)</span>) in these models- we just keep
-track of whether each patch is occupied or not, and what fraction of
-patches in our landscape are occupied at each time step.</p>
-<p>That is, the [Stock] we are studying now is NOT the total number of
-individuals but instead it is the fraction of patches occupied!</p>
+<p>In a classical metapopulation, the [Stock] we are studying now is NOT
+the total number of individuals but instead it is the fraction of
+patches occupied!</p>
 <p>Instead of investigating population dynamics, we are investigating
 <em>metapopulation occupancy dynamics</em> – that is, how the fraction
 of occupied patches changes over time.</p>
-<p><strong>Q</strong>: how does a metapopulation grow?</p>
-<p><strong>Q</strong>: how does a metapopulation shrink?</p>
-<p><strong>Q</strong>: what is the analog of demographic stochasticity
-in a metapopulation model? [tophat]</p>
-<p>[pause and answer TopHat question]</p>
+<p>How does a metapopulation grow? How does a metapopulation shrink?</p>
 <p><strong>colonization</strong> is the process of a patch transitioning
 from unoccupied to occupied via <strong>immigration</strong> from an
 external source!</p>
@@ -635,23 +611,28 @@ external source!</p>
 patch transitioning from occupied to unoccupied.</p>
 <p><strong>global extinction</strong> represents extinction
 (extirpation) of all patches in the metapopulation.</p>
+<p><strong>Q</strong>: what is the analog of demographic stochasticity
+in a metapopulation model? [PointSolutions]</p>
+<p>NOTE: the “individual” in a metapopulation model is a patch. The
+analogy to “death” in a metapopulation is extinction.</p>
 <p>More formally, here are some terms we will consider:</p>
 <p><span class="math inline">\(f_t\)</span> is the fraction, or
 proportion, of patches that are occupied at time <span
 class="math inline">\(t\)</span>. This is also known as the
 <strong>occupancy fraction</strong>. This is the primary [Stock] we
-model in a classical metapopulation model.</p>
-<p><span class="math inline">\(I\)</span> is the total fraction of
-patches that are colonized by immigrants per time period (colonization
-rate, or “immigration” rate).</p>
+model in a classical metapopulation model.<br />
+<span class="math inline">\(I\)</span> is the total fraction of patches
+that are colonized by immigrants per time period (colonization rate, or
+“immigration” rate).</p>
 <p><span class="math inline">\(E\)</span> is the total fraction of
 patches that are extirpated per time period (extirpation rate).</p>
-<p>Therefore, the change in occupancy can be expressed as:</p>
+<p>Therefore, the change in occupancy <span class="math inline">\(\Delta
+f\)</span> can be expressed as:</p>
 <p><span class="math inline">\(\Delta f = I - E\)</span></p>
 <p><span class="math inline">\(p_i\)</span> is the probability of
-colonization for any given (non-occupied) patch.</p>
+colonization for any non-occupied patch.</p>
 <p><span class="math inline">\(p_e\)</span> is the probability of
-extinction for any given (occupied) patch.</p>
+extinction for any occupied patch.</p>
 <p>Now that we have the basic terms defined, we can build a basic model
 of metapopulation dynamics! We will do this in lab- refer to the <a
 href="LAB6.html">metapopulation lab</a> for more details!</p>
@@ -697,10 +678,10 @@ potential immigrants within the metapopulation.</p>
 <p><span class="math inline">\(i\)</span> represents the strength of
 internal immigration (how much the probability of colonization increases
 with each new occupied patch in the metapopulation.</p>
-<p>Another way to think of <span class="math inline">\(i\)</span> in
-this model is the maximum rate of successful colonization of an
-unoccupied patch when nearly all patches in the metapopulation are
-occupied.</p>
+<p>In this model, the colonization rate approaches <span
+class="math inline">\(i\)</span> as nearly all patches become occupied,
+and approaches zero as the metapopulation approaches global
+extinction</p>
 </div>
 <div id="variant-3-rescue-effect." class="section level4">
 <h4>Variant #3: rescue effect.</h4>
@@ -709,10 +690,13 @@ populations in the metapopulation!</p>
 <p><strong>Q</strong>: does this make sense? How does the rescue effect
 work?</p>
 <p><span class="math inline">\(p_e = e(1-f)\)</span></p>
-<p><span class="math inline">\(e\)</span> represents the strength of the
-rescue effect. More to the point- <span class="math inline">\(e\)</span>
-represents the maximum rate of extinction (when nearly all patches are
-vacant so the rescue effect is negligible).</p>
+<p>In this model, the extinction rate approaches 0 as the metapopulation
+approaches full occupancy [note, this may not be realistic, as it
+implies a perfectly successful rescue effect!].</p>
+<p>On the other hand, the extinction rate approaches <span
+class="math inline">\(e\)</span> as the metapopulation approaches global
+extirpation (when there are little to no immigrants from other occupied
+patches that could ‘rescue’ an occupied patch from extinction).</p>
 </div>
 </div>
 <div id="dynamic-stability" class="section level3">
@@ -740,8 +724,8 @@ approximately balance out!</p>
 <p>In the classical metapopulation models, we assumed there were a very
 large number of patches in our landscape, so there was no real chance of
 regional/global extinction. But most real metapopulations are small
-enough such that we often need to consider the risk of global
-extinction.</p>
+enough such that we often need to consider the risk of <strong>global
+extinction</strong>.</p>
 <p>Let’s consider a system in which a species occupies a single patch,
 and there is a probability of extinction <span
 class="math inline">\(p_e\)</span> of 0.15 per patch per year.</p>
@@ -780,7 +764,7 @@ dispersal serve to further reduce the risk of global extinction? Why or
 why not?</p>
 <p><strong>Q</strong>: What if the extinction of one patch was
 <em>perfectly correlated</em> with the extinction of all other patches.
-If one goes extinct, all go extinct. [tophat]</p>
+If one goes extinct, all go extinct. [PointSolutions]</p>
 <p>bonus question: what is the risk of global extinction assuming the
 risk of extinction in each of the two patches is not correlated
 (completely independent of one another)?</p>
